--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </tr>
 </table>
 <br>
-<a href="C:\Users\Krish Bende\Desktop\Web Development\contactinfo.html"target="_blank"><em>Contact Information</em></a>
+<a href="contactinfo.html"target="_blank"><em>Contact Information</em></a>
 
 </body>
 </html>
