--- a/contactinfo.html
+++ b/contactinfo.html
@@ -1,11 +1,12 @@
 <html>
+    <body style="background-color:#cbf1f5">
     <h2>Contact Information</h2>
     <h4><em>Krish Bende</em></h4>
 <table cellspacing=15>
-    <tr><td><img src="C:\Users\Krish Bende\Desktop\Web Development\images\email.png" height=35 width=35></td><td>krishbende714@gmail.com</td></tr>
-<tr><td><img src="C:\Users\Krish Bende\Desktop\Web Development\images\telephone.jpg" height=35 width=35></td><td>(+91)7769851390</td></tr>
-<tr><td><img src="C:\Users\Krish Bende\Desktop\Web Development\images\instagram.png" height=35 width=35></td><td>krish.bende</td></tr>
-<tr><td><img src="C:\Users\Krish Bende\Desktop\Web Development\images\address.png" height=35 width=35></td><td>Pune, MH-411021</td></tr>
+    <tr><td><img src="email.png" height=35 width=35></td><td>krishbende714@gmail.com</td></tr>
+<tr><td><img src="telephone.jpg" height=35 width=35></td><td>(+91)7769851390</td></tr>
+<tr><td><img src="instagram.png" height=35 width=35></td><td>krish.bende</td></tr>
+<tr><td><img src="address.png" height=35 width=35></td><td>Pune, MH-411021</td></tr>
 </table>
 <h4><em>Your Information</em></h4>
 <form action="mailto:krishbende714@gmail.com" method="post" enctype="text/plain"><!--13 Labels-->
